--- a/.github/workflows/reindex.yml
+++ b/.github/workflows/reindex.yml
@@ -42,6 +42,9 @@ jobs:
           echo "Total Markdown files collected: $(jq length <<< "$FILES_JSON")"
           echo $FILES_JSON > temp_sync/files.json
 
+          echo "Final files.json content:"   # <<< Start of final file log
+          cat temp_sync/files.json           # <<< Actually dump it to logs
+
       - name: Sync to API
         run: |
           echo "Sending sync request..."
